
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Setting</string>
    <string name="app_name">Final</string>
    <string name="search">Search</string>
    <string name="save" id="@+id/save">Save</string>
    <string name="delete" id="@+id/delete">Delete</string>
    <string name="overflow">Help</string>
    <string name="author">Author: Jiyi Wei</string>
    <string name="version">Version 1.0</string>
    <string name="help">You can use this app to search, save or delete news stories from a News Crawler.</string>
    <string name="main">News Feed</string>

    <string name="dictionary">Merriam Webster Dictionary</string>
    <string name="flight">Flight Tracker</string>
    <string name="nytimes">New York Times</string>
    <string name="button_Add_article">New York Times</string>

    <string name="startButton">Start</string>

    <string name="savedButton">Saved Flights</string>

    <string name="aboutButton">About</string>

    <string name="enterCode">Enter IATA Airport Code</string>

    <string name="searchButton">Search</string>

    <string name="helpButton">Need Help?</string>

    <string name="saveButton">SAVE</string>


</resources>
