<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



    <EditText
        android:id="@+id/searchCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterCode"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/searchButton"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/deparAndArrival">

    </ListView>

    <Button
        android:id="@+id/needHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpButton"
        android:layout_gravity="center"/>



    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:progress="50"/>

</LinearLayout>